video download API and user crud.
