# backend/src/routes/videoStream/videoStream.router.ts
@@ -4,5 +4,6 @@ import { videoStreamController } from "../../controllers/videoStream";
 const router = express.Router();
 
 router.get('/:filename/stream', videoStreamController.streamVideo);
+router.get('/:filename/download', videoStreamController.downloadVideo);
 
 export default router;
